tests/src/frontend/typechecking/invalid/invalid_inst_2.sk
base class Foo {
  fun bar(x: inst): void;
}
